--- a/UserDetail.html
+++ b/UserDetail.html
@@ -13,7 +13,7 @@
 <body class="d-flex justify-content-center align-items-center custom-height bg-light-emphasis">
     <form class="border border-3 border-success p-4 rounded-4 bg-light" style="width: 450px;  margin-top:50px;"
         style="border-radius: 0;">
-        <h2 class="md">Currency Converter</h2>
+        <h2 class="text-center">Currency Converter</h2>
         <div class="amount">
             <p>Enter Amount</p>
             <input value="" type="text" class="form-control border-primary rounded-3">
